# HyperV-Manager

./: .gitignore  BasePage.cpp  BasePage.h  CMakeLists.txt  CreateVMPage.cpp  CreateVMPage.h  DDAPage.cpp  DDAPage.h  GpuSettingsPage.cpp  GpuSettingsPage.h  HomePage.cpp  HomePage.h  HyperVManager.cpp  HyperVManager.h  MainWindow.cpp  MainWindow.h  NetworkPage.cpp  NetworkPage.h  README.md  SettingPage.cpp  SettingPage.h  USBPage.cpp  USBPage.h  UsbTunnelManager.cpp  UsbTunnelManager.h  VMSettingsDialog.cpp  VMSettingsDialog.h  VirtualMachinePage.cpp  VirtualMachinePage.h  main.cpp
